fixes header spacing

--- a/brand-themes/nto/styles/segments.manage-segments.scss
+++ b/brand-themes/nto/styles/segments.manage-segments.scss
@@ -120,8 +120,7 @@
 .slds-brand-band.slds-brand-band_medium {
 	&:before {
 	    background-color: #F7F9FB;
-	    height: 15.2rem;
+	    height: 14rem;
 	    background-image: url(/styles/header-bg.png);
-	    background-position: left 0 top 18px;
 	}
 }
