--- a/demo-overrides/dmp/roadshow19/styles/venue.css
+++ b/demo-overrides/dmp/roadshow19/styles/venue.css
@@ -2,9 +2,3 @@
   max-width: 220px;
   width: 220px;
 }
-
-.slds-text-heading_medium, .slds-text-heading--medium {
-  font-weight: 400;
-  padding-top: 1em;
-  padding-left: 1em;
-}
